trunk/Archive2/20/94342c001238b2/output
+ g++-4.8 -std=c++11 -Wall -Wextra main.cpp
main.cpp: In function ‘Parent* make_Parent(int)’:
main.cpp:26:11: error: ‘bad_alloc’ is not a member of ‘std’
     throw std::bad_alloc();
           ^
main.cpp:27:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
